@@ -1,3 +1,4 @@
+2013-07-02 Added event sending on playback finish to Video module
 2013-07-01 Fixed problem with events from not activity gaps
 2013-07-01 Fixed problem with disabled state for draggable gaps
 2013-06-30 Improved performance in Slider module
